--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li>Pursuing BE in Kpriet</li>
   </ul>
   <h3>Course details</h3>
-  <tablecellspacing="10">
+  <table>
     <thead>
       <tr>
         <th>Month</th>
